feat: Refactor WebOS remote to a client-proxy architecture
This commit refactors the WebOS remote application to a new architecture.
The complex control logic now runs on the client-side (browser),
while a simple proxy server solves the CORS security issue.

Key changes:
1.  **lg-webos-remote Package:**
    - Made isomorphic to run in both Node.js and browser environments.
    - Added a getWebSocketImplementation utility to select the correct WebSocket implementation dynamically.
    - Added proxyUrl support to the configuration.

2.  **Proxy Server:**
    - Created a new simple proxy server (simple-proxy.ts) that acts as a pipe between the client and the TV.

3.  **Client Application:**
    - Converted client.js to client.ts.
    - The client now uses the refactored lg-webos-remote package and connects through the proxy.

4.  **Build Process:**
    - Added a uild:client script to package.json to bundle the client-side code.
    - Updated index.html to load the bundled script.

--- a/packages/proxy-server/package.json
+++ b/packages/proxy-server/package.json
@@ -3,6 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "start:proxy": "bun run src/simple-proxy.ts",
+    "build:client": "bun build ./public/remote-control/client.ts --outdir ./public/remote-control/dist"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/ws": "^8.5.10"
